Make Skyhub responsive
* Pick dynamic grid columns
* Fix overflowing statement

--- a/skyhub.html
+++ b/skyhub.html
@@ -73,7 +73,7 @@
         <div class="mirror-body">
 
 
-            <div class="objectives2">
+            <div class="objectives">
                 <div>
                     <div class="category-title">Roles:</div> UX/UI Designer & Researcher
                 </div>
@@ -107,9 +107,10 @@
 
     </div>
 
-    <div class="statement">How might we design a senior-friendly website that enables senior citizens to navigate
-        without
-        assistance?
+    <div class="content">
+        <div class="statement">
+            How might we design a senior-friendly website that enables senior citizens to navigate without assistance?
+        </div>
     </div>
 
 
