Added an annotation

--- a/skyhub.html
+++ b/skyhub.html
@@ -62,6 +62,11 @@
     </div>
 
     <div class="content">
+        <div class="annotation">*Since this project was conducted in Japanese, the majority of the deliverables are
+            also in Japanese.</div>
+
+
+
         <div class="category-title">What is SkyHub?</div>
         <div class="mirror-body">
             Skyhub is a grocery delivery website that offers users the convenience of having their groceries delivered
