--- a/shopify-apps.html
+++ b/shopify-apps.html
@@ -58,7 +58,7 @@
     <div class="content">
 
 
-        <div class="category-title">What is Shopify App?</div>
+        <div class="category-title"> What is a Shopify App?</div>
         <div class="mirror-body">
             Shopify is a platform for e-commerce businesses to run online stores. It offers a wide range of features to
             help businesses achieve their goals in their online stores. Shopify apps are third-party extensions that
@@ -97,8 +97,9 @@
                 organized this information and made decisions regarding which features to include or exclude. Afterward,
                 I transitioned to the wireframing phase to prepare for handoff to a UI designer. <br><br>
 
-                Since those apps are designed for e-commerce use and primarily used in Japan, I took extra care to
-                understand how their delivery system works, along with its cultural background.
+                Since these apps are primarily used in Japan, I took extra care to understand how the delivery system
+                works there, along with the cultural context.
+
 
             </div>
         </div>
@@ -107,7 +108,7 @@
     </div>
     <div class="content">
         <div class="category-title">Apps that I worked on:</div>
-        <div class="mirror-body">Some apps do not align with my design.
+        <div class="mirror-body">ote: some apps do not include my designs due to changed product maps.
         </div>
     </div>
 
@@ -115,7 +116,8 @@
     <div class="content-home shopifyapps-list">
 
         <div class="shopifyapps">
-            <a class="shopifyappslink shopify-link" target="_blank" href="https://apps.shopify.com/andd-loyalty?locale=ja">
+            <a class="shopifyappslink shopify-link" target="_blank"
+                href="https://apps.shopify.com/andd-loyalty?locale=ja">
                 <img src="img/membership.png" alt="Shopify app logo, membership">
                 <div class="shopifyapps-spacer-small"></div>
                 <div>Point & Membership</div>
