Added a new file to index.html
– Made shopify-apps.html accessible from the main page

--- a/index.html
+++ b/index.html
@@ -78,6 +78,29 @@
 
             <div class="case-study">
 
+                <a href="shopify-apps.html">
+
+
+
+                    <img class="case-study-image" src="img/shopify-mockup.png"
+                        alt="shopify logo, Image by rawpixel.com">
+
+                </a>
+
+                <div>
+                    <div class="title-shurui">WORK PROJECT</div>
+                    <div class="case-study-title">Shopify Apps</div>
+                    Enabling stores to have customized features. <div>
+                        <a class="case-study-cta case-study-cta-button"
+                            href="shopify-apps.html">View case study</a>
+                    </div>
+                </div>
+
+            </div>
+
+
+            <div class="case-study">
+
                 <a href="skyhub.html">
 
 
@@ -97,6 +120,10 @@
                 </div>
 
             </div>
+
+
+
+
             <div class="case-study">
 
                 <a href="1thing.html">
