--- a/shopify-apps.html
+++ b/shopify-apps.html
@@ -108,7 +108,7 @@
     </div>
     <div class="content">
         <div class="category-title">Apps that I worked on:</div>
-        <div class="mirror-body">ote: some apps do not include my designs due to changed product maps.
+        <div class="mirror-body">Note: some apps do not include my designs due to changed product maps.
         </div>
     </div>
 
