Updated images on skyhub.html
– Added an interview result image
– Added color palette

--- a/skyhub.html
+++ b/skyhub.html
@@ -62,8 +62,10 @@
     </div>
 
     <div class="content">
-        <div class="annotation">*Since this project was conducted in Japanese, the majority of the deliverables are
-            also in Japanese.</div>
+        <div class="annotation">
+            <span class="annotation-emoji">&#128161;</span>As the project was in Japanese, the majority of the
+            deliverables are also in Japanese.
+        </div>
 
 
 
@@ -176,17 +178,8 @@
 
         Here are the major needs and pain points I collected from the user interviews:
 
-        <div>
+        <img class=content-no-padding src="skyhub/interview.jpg" alt="Interview summary">
 
-            <a href=#img-interview class="lightbox-link">
-                <img class=content-top-bottom src="skyhub/interview.jpg" alt="Interview summary">
-            </a>
-
-            <a href="#!" class="lightbox" id="img-interview">
-                <span style="background-image: url('skyhub/interview.jpg')"></span>
-            </a>
-
-        </div>
 
 
     </div>
