--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
                 I'm Kotomi Cogdill.
             </h1>
             Bilingual &#127471;&#127477;&#127482;&#127480;
-            UX/UI designer based in the SF Bay Area.
-            Empowering Confidence with Thoughtful Design.<br>
+            UX/UI designer based in the SF Bay Area.<br>
+            I design to empower confidence to foster a positive user experience. <br><br>
+
+            Hope you like my proudly self-coded website! Enjoy!
+
+            <br>
 
 
 
