--- a/skyhub.html
+++ b/skyhub.html
@@ -145,7 +145,7 @@
 
 
         <div class="content mirror-body">
-            <h1>01. Research</h1>
+            <h1>01. Discovery</h1>
         </div>
     </div>
 
