Updated on skyhub.html
– Added persona
– Edited padding

--- a/skyhub.html
+++ b/skyhub.html
@@ -107,6 +107,20 @@
 
             </div>
 
+
+
+            <div class="category-title">Persona</div>
+            <div class="mirror-body">
+                This website is primarily designed for a specific demographic, with about 10 users in the initial phase.
+                Here are some characteristics of the intended users.
+
+                <img class=content-no-cursor-top src="skyhub/persona.jpg" alt="DEmographic persona">
+
+
+            </div>
+
+
+
             <div class="category-title">Challenges</div>
             In general, senior citizens may not be familiar with using digital products. Therefore, it is expected
             that they may encounter challenges when navigating regular grocery delivery websites. <br><br>
@@ -116,7 +130,7 @@
 
     <div class="content">
         <div class="statement">
-            How might we design a senior-friendly website that enables senior citizens to navigate without assistance?
+            How might we help seniors shop groceries online smoothly without assistance?
         </div>
     </div>
 
@@ -145,7 +159,7 @@
 
 
         <div class="content mirror-body">
-            <h1>01. Discovery</h1>
+            <h1>01. Discover</h1>
         </div>
     </div>
 
@@ -178,7 +192,7 @@
 
         Here are the major needs and pain points I collected from the user interviews:
 
-        <img class=content-no-padding src="skyhub/interview.jpg" alt="Interview summary">
+        <img class=content-no-cursor src="skyhub/interview.jpg" alt="Interview summary">
 
 
 
@@ -197,30 +211,12 @@
     </div>
 
     <div class="content mirror-body">
-        <div class="category-title">Persona</div>
-        This website would primarily be used by a specific demographic, so there was no need to create a persona. Here
-        are some
-        characteristics of the actual users:
-
-        <div>
-            <li>Aged 75 and above.
-            </li>
-            <li>Limited access to personal/public transportation.
-            </li>
-            <li>Residing in spread-out and secluded areas of the city.
-            </li>
-            <li>Some users face physical limitations that prevent them from going grocery shopping.
-            </li>
-        </div>
-
-
-
 
         <div class="category-title">User Flow</div>
-        After gaining a comprehensive understanding of the user needs and pain points through my research, I focused on
-        determining the specific details of the user flow. I ensured that the flow remained linear, allowing users to
-        navigate either forward or backward. However, on the cart page, I provided flexibility for users to modify order
-        details if needed. This feature also enables them to correct any mistakes they may have made while adding
+        After gaining a comprehensive understanding of the user needs and pain points through my research, I focused
+        on determining the specific details of the user flow. I ensured that the flow remained linear, allowing users
+        to navigate either forward or backward. However, on the cart page, I provided flexibility for users to modify
+        order details if needed. This feature also enables them to correct any mistakes they may have made while adding
         products.
 
         <div>
@@ -238,6 +234,7 @@
     </div>
 
 
+
     <div class="stage6">
         <div class="content mirror-body">
             <h1>03. Design</h1>
@@ -250,8 +247,10 @@
 
         <div class="category-title">Sketches</div>
 
-        To visualize and consolidate my ideas, I created sketches of the main screens. I chose to design the flow as a
-        linear process, avoiding branching out to different pages with distinct functions. This approach allows users to
+        To visualize and consolidate my ideas, I created sketches of the main screens. I chose to design the flow as
+        a
+        linear process, avoiding branching out to different pages with distinct functions. This approach allows
+        users to
         proceed either forward or backward, simplifying the navigation options.
 
         <div>
@@ -272,7 +271,8 @@
         To ensure that the site was user-friendly for seniors, I made sure to:
 
         <div>
-            <li>Eliminate features like recommendations found on regular grocery delivery sites to prevent information
+            <li>Eliminate features like recommendations found on regular grocery delivery sites to prevent
+                information
                 overload.
             </li>
             <li>Organize features into separate pages to enable seniors to proceed step-by-step.
@@ -324,7 +324,8 @@
         <div class="category-title">Hi-Fidelity Design</div>
         Incorporating the client's request for visual design consistency with their existing bus-booking website, I
         integrated the following research findings into my design approach:
-        Ensuring that text sizes are larger than 18px, colors are chosen appropriately, and other visual elements are
+        Ensuring that text sizes are larger than 18px, colors are chosen appropriately, and other visual elements
+        are
         designed to be easily visible for all users. <br><br>
         I selected a color palette from <a class="link"
             href=https://jfly.uni-koeln.de/colorset/CUD_color_set_GuideBook_2018.pdf target="_blank">the
@@ -333,7 +334,7 @@
 
 
 
-        <img class=content-no-padding src="skyhub/color-palette.jpg" alt="color-palette">
+        <img class=content-no-cursor src="skyhub/color-palette.jpg" alt="color-palette">
 
 
 
@@ -388,11 +389,14 @@
     <div class="content mirror-body">
 
         <div class="category-title">Prototype and Usability Test</div>
-        <a class="link"
-            href="https://www.figma.com/proto/qKoACrXzA4t2YThlsfJRDs/%E9%AB%98%E9%BD%A2%E8%80%85%E5%90%91%E3%81%91%E6%B3%A8%E6%96%87%E7%AE%A1%E7%90%86%E3%82%B7%E3%82%B9%E3%83%86%E3%83%A0?page-id=81%3A1092&type=design&node-id=547-1730&viewport=565%2C520%2C0.12&scaling=min-zoom&starting-point-node-id=547%3A1730"
-            target="_blank">View Prototype</a><br><br>
+
+
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+            src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FqKoACrXzA4t2YThlsfJRDs%2F%25E9%25AB%2598%25E9%25BD%25A2%25E8%2580%2585%25E5%2590%2591%25E3%2581%2591%25E6%25B3%25A8%25E6%2596%2587%25E7%25AE%25A1%25E7%2590%2586%25E3%2582%25B7%25E3%2582%25B9%25E3%2583%2586%25E3%2583%25A0%3Fpage-id%3D81%253A1092%26type%3Ddesign%26node-id%3D547-1730%26viewport%3D367%252C260%252C0.02%26t%3DkQlqHm7tvWtgqPY0-1%26scaling%3Dscale-down%26starting-point-node-id%3D547%253A1730%26mode%3Ddesign"
+            allowfullscreen></iframe>
         After completing the high-fidelity design, I created a final prototype and presented it to Kamishihoro City
-        Hall. I requested that real users be involved in the process, and we were able to have a few seniors test it.
+        Hall. I requested that real users be involved in the process, and we were able to have a few seniors test
+        it.
 
         <br><br>
         Although I was unable to attend in person (as I work remotely), my project manager kindly conducted the
@@ -400,16 +404,19 @@
         Here are the findings:
 
         <div>
-            <li>Overall, the flow was easy to use, and there weren't any major issues. Users appeared to be able to make
+            <li>Overall, the flow was easy to use, and there weren't any major issues. Users appeared to be able to
+                make
                 full use of it once they became familiar with it.
             </li>
-            <li>I had underestimated the users' familiarity with digital products since they were already using the bus
+            <li>I had underestimated the users' familiarity with digital products since they were already using the
+                bus
                 reservation system. Several users preferred being able to add items to the cart directly from the
                 product list instead of being taken to a product page.
             </li>
         </div>
 
-        <br>Considering that the majority of users indicated a preference for adding items from the product list, I've
+        <br>Considering that the majority of users indicated a preference for adding items from the product list,
+        I've
         updated the design to allow them to directly add items.
 
 
@@ -426,10 +433,20 @@
 
         </div>
 
+        Here is a video showcasing the final test, illustrating the entire process from ordering to delivery by
+        drones.
+
+        <div class="container"><iframe class="youtube-video"
+                src="https://www.youtube.com/embed/BEweKMO2KTs?si=XXWuHpZsx4IA8Bs7&amp;start=19"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen>
+            </iframe>
+        </div>
+
     </div>
 
 
-    </div>
 
 
 
