Added photos to about.html
– Added more photos to "outside of design"

--- a/about.html
+++ b/about.html
@@ -88,18 +88,12 @@
                 <div class="about-text">
 
                     <div class="category-title">Background</div>
-
-
-
-
                     I worked for a travel agency in Japan, where I crafted unique tours with team members
                     from multiple backgrounds and countries. I spent a lot of time researching destinations and putting
                     myself into customers’ shoes for smooth and happy travels.
                     When the Pandemic hit, I transitioned to working as a childcare provider in response to the
                     significant downturn in the travel industry. Currently, I work as a UX designer at a Japanese
                     startup, specializing in the design of Shopify apps and client-based projects.
-
-
 
                 </div>
 
@@ -118,16 +112,62 @@
 
         <div class="content">
             <div class="about-bottom">
-                <div class="category-title">Outside of design I love:</div>
-                <li>My dogs, Warabi and Mochi</li>
-                <li>Matcha (I’m from Uji, home to the best matcha in Japan!)</li>
-                <li>Volleyball</li>
-                <li>Food</li>
-                <li>Travel</li>
+                <div class="category-title">Outside of design I am...</div>
+                <div class="non-design-images">
+                    <div>
+                        <img class="content-image about-image" src="img/dogs.JPG" alt="kotomi's dogs'">
+                        <div>
+                            <span>
+                                a dog lover
+                            </span>
+                        </div>
+                    </div>
+                    <div>
+                        <img class="content-image about-image" src="img/food.JPG" alt="beutiful food">
+                        <div>
+                            <span>
+                                a foodie
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="non-design-images">
+
+                    <div>
+                        <img class="content-image about-image" src="img/kotomi_volleyball.jpg"
+                            alt="kotomi playing volleyball">
+                        <div>
+                            <span>
+                                a volleball enthusiast
+                            </span>
+                        </div>
+                    </div>
+                    <div>
+                        <img class="content-image about-image" src="img/kotomi_deathvalley.jpg"
+                            alt="kotomi in the Death Valley Nationa Park">
+                        <div>
+                            <span>
+                                a traveller
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
 
 
+
         </div>
+
+
+
+
+
+
+
+
 
 
         <div class="content">
