--- a/skyhub.html
+++ b/skyhub.html
@@ -334,7 +334,7 @@
 
 
 
-        <img class=content-no-cursor src="skyhub/color-palette.jpg" alt="color-palette">
+        <img class="content-no-cursor" src="skyhub/color-palette.jpg" alt="color-palette">
 
 
 
@@ -394,11 +394,17 @@
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
             src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FqKoACrXzA4t2YThlsfJRDs%2F%25E9%25AB%2598%25E9%25BD%25A2%25E8%2580%2585%25E5%2590%2591%25E3%2581%2591%25E6%25B3%25A8%25E6%2596%2587%25E7%25AE%25A1%25E7%2590%2586%25E3%2582%25B7%25E3%2582%25B9%25E3%2583%2586%25E3%2583%25A0%3Fpage-id%3D81%253A1092%26type%3Ddesign%26node-id%3D547-1730%26viewport%3D367%252C260%252C0.02%26t%3DkQlqHm7tvWtgqPY0-1%26scaling%3Dscale-down%26starting-point-node-id%3D547%253A1730%26mode%3Ddesign"
             allowfullscreen></iframe>
+
+            <br><br>
         After completing the high-fidelity design, I created a final prototype and presented it to Kamishihoro City
         Hall. I requested that real users be involved in the process, and we were able to have a few seniors test
         it.
 
-        <br><br>
+        <div class="two-images">
+            <img class="two-image" src="skyhub/usabilitytest1.jpg" alt="A picture of a participant doing usability test ">
+            <img class="two-image" src="skyhub/usabilitytest2.jpg" alt="A picture of a participant doing usability test ">
+        </div>
+
         Although I was unable to attend in person (as I work remotely), my project manager kindly conducted the
         usability test on my behalf.
         Here are the findings:
