Swapped projects displayed on the landing page
 – Picked different case studies to showcase on the landing page

--- a/index.html
+++ b/index.html
@@ -80,13 +80,32 @@
         <div class="content-home">
             <h2>Projects</h2>
 
-           
+            <div class="case-study">
+                <a href="windows-to-japan.html">
+
+
+
+                    <img class="case-study-image" src="img/wtj-mock-up.png"
+                        alt="Windows to Japan, end to end application, Image by rawpixel.com">
+
+                </a>
+
+                <div>
+                    <div class="title-shurui">VOLUNTEER PROJECT</div>
+                    <div class="case-study-title">Windows to Japan</div>
+                    An end-end application that replaces your physical itinerary with a digital one.
+                    <div><a class="case-study-cta case-study-cta-button" href="windows-to-japan.html">View case
+                            study</a>
+                    </div>
+                </div>
+
+
+
+            </div>
 
             <div class="case-study">
 
                 <a href="skyhub.html">
-
-
 
                     <img class="case-study-image" src="img/skyhub-mock-up.png"
                         alt="Skyhub tablet screen, Image by rawpixel.com">
@@ -106,50 +125,28 @@
 
 
             <div class="case-study">
-
-                <a href="shopify-apps.html">
-
-
-
-                    <img class="case-study-image" src="img/shopify-mockup.png"
-                        alt="shopify logo, Image by rawpixel.com">
-
-                </a>
-
-                <div>
-                    <div class="title-shurui">WORK PROJECT</div>
-                    <div class="case-study-title">Shopify Apps</div>
-                    Enabling stores to have customized features. <div>
-                        <a class="case-study-cta case-study-cta-button"
-                            href="shopify-apps.html">View case study</a>
-                    </div>
-                </div>
-
-            </div>
-
-
-            <div class="case-study">
-
-                <a href="1thing.html">
+                <a href="all-about-matcha.html">
 
 
 
-                    <img class="case-study-image" src="1thing/Mock-up.png"
-                        alt="1 Thing Against Racism Responsive screens, Image by rawpixel.com">
+                    <img class="case-study-image" src="img/Matcha-mock-up.png"
+                        alt="All about matcha, e-commerce website, Image by rawpixel.com">
 
                 </a>
 
                 <div>
-                    <div class="title-shurui">VOLUNTEER PROJECT</div>
-                    <div class="case-study-title">1 Thing Against Racism</div>
-                    A responsive website to spread awareness about anti-Asian racism.
-                    <div><a class="case-study-cta case-study-cta-button" href="1thing.html">View case study</a>
-                    </div>
+                    <div class="title-shurui">STUDENT PROJECT</div>
+                    <div class="case-study-title">All About Matcha</div>
+                    A responsive e-commerce website that provides online Japanese Tea Ceremony classes and matcha
+                    products.
+                    <div><a class="case-study-cta case-study-cta-button" href="all-about-matcha.html">View case
+                            study</a></div>
                 </div>
 
 
 
             </div>
+
 
 
         </div>
