--- a/about.html
+++ b/about.html
@@ -113,17 +113,19 @@
         <div class="content">
             <div class="about-bottom">
                 <div class="category-title">Outside of design I am...</div>
+
                 <div class="non-design-images">
                     <div>
-                        <img class="content-image about-image" src="img/dogs.JPG" alt="kotomi's dogs'">
+                        <img class="content-image about-image" src="img/dogs.jpg" alt="kotomi's dogs'">
                         <div>
                             <span>
                                 a dog lover
                             </span>
                         </div>
                     </div>
+
                     <div>
-                        <img class="content-image about-image" src="img/food.JPG" alt="beutiful food">
+                        <img class="content-image about-image" src="img/food.jpg" alt="beutiful food">
                         <div>
                             <span>
                                 a foodie
